# CopilotStartup

./: .gitignore  CopilotStartup.slnx  CopilotTest.sln  DOTNET10_FEATURES.md  README.md  SECURITY_SUMMARY.md  UPGRADE_SUMMARY.md  whatisnewincopilot.prompt.yml
.github/: copilot-instructions.md
.github/.github/instructions/: api.instructions.md  web.instructions.md
.github/instructions/: api.instructions.md  cpp-service.instructions.md  web.instructions.md
.github/prompts/: add-llm-integration.prompt.md
.github/workflows/: azure-static-web-apps.yml  cpp-service-ci.yml
src/Documentation/: README.md
src/HttpRequests/: README.md
src/api/: ChatFunction.cs  CopilotStartup.Api.csproj  HttpTrigger.cs  Program.cs  api.csproj
src/api/Functions/: BlobListFunction.cs  GetBlobs.cs  GetTableData.cs  TableDataFunction.cs
src/api/Models/: ChatRequest.cs  ChatResponse.cs
src/api/Properties/: launchSettings.json
src/cpp-service/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  cpp-service
src/cpp-service/_codeql_build_dir/: Makefile
src/cpp-service/_codeql_build_dir/examples/: Makefile
src/cpp-service/_codeql_build_dir/tests/: Makefile  webservice_tests[1]_include.cmake  webservice_tests[1]_tests.cmake
src/cpp-service/examples/: CMakeLists.txt  client_example.cpp
src/cpp-service/include/: handlers.h  server.h
src/cpp-service/src/: handlers.cpp  main.cpp  server.cpp
src/cpp-service/tests/: CMakeLists.txt  test_handlers.cpp  test_server.cpp
src/test/: BlobListFunctionTests.cs  TableDataFunctionTests.cs  test.csproj
src/web/: Program.cs  _Imports.razor  web.csproj
src/web/Layout/: NavMenu.razor  NavMenu.razor.css
src/web/Models/: ChatModels.cs
src/web/Pages/: Blobs.razor  Chat.razor  Home.razor  TableData.razor
src/web/Properties/: launchSettings.json
src/web/Services/: ChatService.cs
src/web/wwwroot/: index.html
src/web/wwwroot/css/: app.css
tests/playwright/: package.json  playwright.config.ts
tests/playwright/tests/: chat.spec.ts
